Without this z-index rule, the dark, fixed-position panel looks like this: http://cl.ly/2e18031N092z1B2v3S2Q. This remedies that...

--- a/css/screen.css
+++ b/css/screen.css
@@ -278,3 +278,5 @@ hr { margin-bottom:1.625em; }
 ul {
     margin-left: 20px;
 }
+
+.right.panel{z-index: 1 !important;}
